[REMOVE] parameter max distance
