# api.yml
@@ -125,10 +125,6 @@ paths:
         required: true
         schema:
           type: string
-      - name: max_distance
-        in: query
-        schema:
-          type: integer
       responses:
         '200':
           description: Successfully Get
